fix page description not show on mobile.

--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -40,7 +40,7 @@
 
     p {
         line-height: 1.7em;
-        margin: 12px 0 0 0;
+        margin: 12px 0 12px 0;
         font-size: 14px;
     }
     pre {
